Revision history for Perl module Geo::Coder::Many.

0.16    3 Dec 2010
        - added Geo::Coder::Many::Mapquest
        - pod tweaks

0.15    11 Nov 2010
        - Geo::Coder::Many::Google assumed google geocoding api v3
          when in reality v2 is used. This is now fixed. 

          Have tried to contact author of Geo::Coder::Google about
          supporting v3
   
0.14    8 Nov 2010
        - fixed mix up of long and lat in in Geo::Coder::Many::Bing
          thx to stpra123 for reporting
        - previously Geo::Coder::Many::Google had been returning precision
          of 1.0 for all requests (what a wonderful world that would be)
          Now determines precision based on response
        - previously Geo::Coder::Many::OSM had been returning precision 
          of undef for all requests (what a terrible world that would be)
          Now determines precision based on response
        - both of the above use 
          Geo::Coder::Many::Util::determine_precision_from_bbox
          which use Geo::Distance::XS
        - new tests
        - submitted by co-maintainer EDF
        - corresponds to Lokku internal revision 39083

0.13    26 Aug 2010
        - Minor tweaks (internal SVN revision 36990)

0.12     30 Jul 2010
        - Fixed test plan

0.11    30 Jul 2010
        - Minor tweaks and improvements to documentation

0.1     26 Jul 2010
        - Release of Geo::Coder::Many, based on Geo::Coder::Multiple